--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.ChatListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/recycler_view_chat_list"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"/>
 
 </FrameLayout>
