--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green">#08D9D6</color>
+    <color name="dark_grey">#252A34</color>
+    <color name="pink">#FF2E63</color>
+    <color name="light_grey">#EAEAEA</color>
+
+
 </resources>
