--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,41 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="chat_list_name">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">#252A34</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="chat_list_text">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#48484A</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="chat_list_time">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#48484A</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Divider_grey">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">#A9A9A9</item>
+    </style>
+
+    <style name="message_text">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="message_time">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
