--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -14,6 +14,7 @@
         tools:context=".ui.ChatListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/chat_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/recycler_view_chat_list"
