--- a/app/src/main/res/layout/recycler_view_chat_list.xml
+++ b/app/src/main/res/layout/recycler_view_chat_list.xml
@@ -33,6 +33,7 @@
             >
 
             <TextView
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Harry Potter"
