--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,10 +13,18 @@
     <fragment
         android:id="@+id/chatListFragment"
         android:name="com.mapd721.secretchat.ui.ChatListFragment"
-        android:label="Chat List" />
+        android:label="Chat List">
+        <action
+            android:id="@+id/action_chatListFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/chatFragment"
         android:name="com.mapd721.secretchat.ui.ChatFragment"
-        android:label="Chat" />
+        android:label="Chat">
+        <argument
+            android:name="contact"
+            app:argType="com.mapd721.secretchat.data_model.contact.Contact" />
+    </fragment>
 </navigation>
