--- a/app/src/main/res/layout/recycler_view_sender.xml
+++ b/app/src/main/res/layout/recycler_view_sender.xml
@@ -22,6 +22,7 @@
             android:layout_marginStart="16dp"/>
 
         <TextView
+            android:id="@+id/content_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/receiver_message"
