--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/chatListFragment" >
+    app:startDestination="@id/homeFragment" >
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.mapd721.secretchat.ui.HomeFragment"
-        android:label="Chats" />
+        android:label="Chats">
+
+        <action
+            android:id="@+id/action_homeFragment_to_chatListFragment"
+            app:destination="@id/chatListFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/chatListFragment"
