--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -18,25 +18,41 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/msg_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="88dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="0dp"/>
+        android:layout_marginStart="0dp"
+        tools:listitem="@layout/recycler_view_chat"
+        />
 
 <LinearLayout
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:layout_marginBottom="16dp"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="horizontal">
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_attach_file_24"
+        android:elevation="0dp"
+        app:elevation="0dp"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="Attachment"
+        android:outlineProvider="none"
+        app:borderWidth="0dp"/>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edt_msg"
-        android:layout_width="320dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:hint="Enter the Message"
         android:textSize="20sp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="0dp"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
