--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -13,6 +13,15 @@
         android:layout_height="match_parent"
         tools:context=".ui.ChatListFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.SearchView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chat_list"
             android:layout_width="match_parent"
@@ -20,6 +29,8 @@
             tools:listitem="@layout/recycler_view_chat_list"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 </layout>
