--- a/app/src/main/res/layout/recycler_view_chat.xml
+++ b/app/src/main/res/layout/recycler_view_chat.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_margin="8dp"
     android:elevation="4dp">
 
@@ -22,13 +22,41 @@
             android:layout_marginStart="16dp"/>
 
         <TextView
-            android:id="@+id/content_text"
+            android:id="@+id/receiver_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/receiver_message"
             style="@style/message_text"
             android:layout_margin="8dp"
             android:padding="8dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/sender_bubble">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sender_message"
+            style="@style/message_text"
+            android:layout_margin="8dp"
+            android:padding="8dp"/>
+
+        <TextView
+            android:id="@+id/sender_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/msg_time"
+            style="@style/message_time"
+            android:layout_marginTop="12dp"
+            android:padding="8dp"
+            android:layout_marginEnd="16dp"/>
+
 
     </LinearLayout>
 
