--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.SecretChat" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/light_blue</item>
+        <item name="colorPrimaryVariant">@color/dark_blue</item>
+        <item name="colorOnPrimary">@color/dark_blue</item>
+        <item name="title">Secret Chat</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/dark_blue</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -16,19 +17,19 @@
 
     <style name="chat_list_name">
         <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#252A34</item>
+        <item name="android:textColor">@color/dark_grey</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="chat_list_text">
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#48484A</item>
+        <item name="android:textColor">@color/dark_grey</item>
         <item name="android:textStyle">normal</item>
     </style>
 
     <style name="chat_list_time">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#48484A</item>
+        <item name="android:textColor">@color/dark_grey</item>
         <item name="android:textStyle">normal</item>
     </style>
 
@@ -41,13 +42,19 @@
     <style name="message_text">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/dark_grey</item>
     </style>
 
     <style name="message_time">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/dark_grey</item>
+    </style>
+
+    <style name="add_contact_title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/dark_blue</item>
     </style>
 
 </resources>
