--- a/app/src/main/res/layout/recycler_view_chat_list.xml
+++ b/app/src/main/res/layout/recycler_view_chat_list.xml
@@ -43,6 +43,7 @@
                 android:layout_marginStart="8dp"/>
 
             <TextView
+                android:id="@+id/latest_message_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="How are you?"
@@ -54,6 +55,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/msg_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tue"
