--- a/app/src/main/res/layout/recycler_view_receiver.xml
+++ b/app/src/main/res/layout/recycler_view_receiver.xml
@@ -22,6 +22,7 @@
             android:padding="8dp"/>
 
         <TextView
+            android:id="@+id/msg_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/msg_time"
