--- a/app/src/main/res/layout/recycler_view_sender.xml
+++ b/app/src/main/res/layout/recycler_view_sender.xml
@@ -13,6 +13,7 @@
         android:background="@drawable/receiver_bubble">
 
         <TextView
+            android:id="@+id/msg_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/msg_time"
