--- a/app/src/main/res/layout/recycler_view_chat_list.xml
+++ b/app/src/main/res/layout/recycler_view_chat_list.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Harry Potter"
+                android:text=""
                 android:textSize="24sp"
                 android:textStyle="bold"
                 style="@style/chat_list_name"
@@ -46,7 +46,7 @@
                 android:id="@+id/latest_message_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="How are you?"
+                android:text=""
                 android:textSize="20sp"
                 style="@style/chat_list_text"
                 android:layout_marginStart="8dp"/>
@@ -58,7 +58,7 @@
             android:id="@+id/msg_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tue"
+            android:text=""
             style="@style/chat_list_time"
             android:layout_marginTop="16dp"/>
 
