--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/add_contact"
+        android:id="@+id/app_bar_btn_add_contact"
         android:icon="@drawable/baseline_add_24"
         android:iconTint="@color/dark_blue"
         app:showAsAction="always"
