--- a/app/src/main/res/layout/recycler_view_chat.xml
+++ b/app/src/main/res/layout/recycler_view_chat.xml
@@ -7,11 +7,17 @@
         android:elevation="4dp">
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentStart="true"
+            android:gravity="start">
+
+        <LinearLayout
             android:id="@+id/receiver_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_alignParentStart="true"
             android:background="@drawable/receiver_bubble">
 
             <TextView
@@ -35,12 +41,38 @@
 
         </LinearLayout>
 
+            <ImageView
+                android:id="@+id/receiver_image"
+                android:layout_width="240dp"
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:scaleType="centerCrop"
+                android:backgroundTint="@color/light_grey"
+                android:background="@color/light_grey"
+                android:visibility="gone"/>
+
+            <VideoView
+                android:id="@+id/receiver_video"
+                android:layout_width="240dp"
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentEnd="true"
+            android:gravity="end">
+
         <LinearLayout
             android:id="@+id/sender_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_alignParentEnd="true"
             android:background="@drawable/sender_bubble">
 
             <TextView
@@ -62,8 +94,28 @@
                 android:padding="8dp"
                 android:layout_marginEnd="16dp"/>
 
+        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/sender_image"
+                android:layout_width="240dp"
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:scaleType="centerCrop"
+                android:background="@color/light_blue"
+                android:visibility="gone"/>
+
+            <VideoView
+                android:id="@+id/sender_video"
+                android:layout_width="240dp"
+                android:layout_height="150dp"
+                android:layout_margin="8dp"
+                android:scaleType="centerCrop"
+                android:visibility="gone"/>
+
 
         </LinearLayout>
+
 
     </RelativeLayout>
 </layout>
