Implement send image
Implement send image

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -45,6 +45,7 @@
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="Attachment"
         android:outlineProvider="none"
+        android:onClick="@{vm.addAttachment}"
         app:borderWidth="0dp"
         />
 
