Implement capturing video to send

--- a/app/src/main/res/menu/attachment_menu.xml
+++ b/app/src/main/res/menu/attachment_menu.xml
@@ -16,6 +16,12 @@
         />
 
     <item
+        android:id="@+id/action_camera"
+        android:title="@string/camera"
+        app:showAsAction="never"
+        />
+
+    <item
         android:id="@+id/action_location"
         android:title="@string/location"
         app:showAsAction="never"
