--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -35,6 +35,9 @@
         <action
             android:id="@+id/action_chatFragment_to_videoPlaybackFragment"
             app:destination="@id/videoPlaybackFragment" />
+        <action
+            android:id="@+id/action_chatFragment_to_videoRecordFragment"
+            app:destination="@id/videoRecordFragment" />
     </fragment>
 
     <fragment
@@ -44,5 +47,11 @@
         <argument
             android:name="fileName"
             app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/videoRecordFragment"
+        android:name="com.mapd721.secretchat.ui.VideoRecordFragment"
+        android:label="Record Video">
     </fragment>
 </navigation>
