Implement capture image

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="vm"
-            type="com.mapd721.secretchat.ui.view_model.VideoRecordViewModel" />
+            type="com.mapd721.secretchat.ui.view_model.CameraViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,16 +17,28 @@
             android:layout_height="match_parent" />
 
         <Button
+            android:id="@+id/btn_capture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Capture"
+            android:layout_marginTop="16dp"
+            android:visibility="@{vm.btnCaptureVisibility}"
+            android:onClick="@{vm.onBtnCaptureClick}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <Button
             android:id="@+id/btn_record"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Record"
             android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
             android:visibility="@{vm.btnRecordVisibility}"
             android:onClick="@{vm.startRecordingVideo}"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/btn_capture" />
 
         <Button
             android:id="@+id/btn_stop"
@@ -34,11 +46,11 @@
             android:layout_height="wrap_content"
             android:text="Stop"
             android:layout_marginTop="16dp"
+            android:layout_marginLeft="8dp"
             android:visibility="@{vm.btnStopVisibility}"
             android:onClick="@{vm.stopRecordingVideo}"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/btn_capture" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
