--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -4,6 +4,9 @@
 
     <data>
         <variable
+            name="global_vm"
+            type="com.mapd721.secretchat.ui.view_model.GlobalViewModel" />
+        <variable
             name="vm"
             type="com.mapd721.secretchat.ui.view_model.ChatListViewModel" />
     </data>
@@ -17,6 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/temperature"
+                android:text="@{`Current temperature: ` + global_vm.temperature.toString()}"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <androidx.appcompat.widget.SearchView
                 android:layout_width="match_parent"
