--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/app_bar_btn_weather"
+        android:icon="@drawable/baseline_cloud_24"
+        android:iconTint="@color/dark_blue"
+        app:showAsAction="ifRoom"
+        android:title="weather report" />
+
+    <item
         android:id="@+id/app_bar_btn_add_contact"
         android:icon="@drawable/baseline_add_24"
         android:iconTint="@color/dark_blue"
