--- a/app/src/main/res/layout/recycler_view_chat.xml
+++ b/app/src/main/res/layout/recycler_view_chat.xml
@@ -7,17 +7,12 @@
         android:elevation="4dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentStart="true"
-            android:gravity="start">
-
-        <LinearLayout
             android:id="@+id/receiver_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_alignParentStart="true"
+            android:gravity="start"
             android:background="@drawable/receiver_bubble">
 
             <TextView
@@ -62,20 +57,13 @@
 
         </LinearLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentEnd="true"
-            android:gravity="end">
-
         <LinearLayout
             android:id="@+id/sender_dialog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_alignParentEnd="true"
+            android:gravity="end"
             android:background="@drawable/sender_bubble">
 
             <TextView
@@ -117,7 +105,6 @@
                 android:padding="8dp"
                 android:layout_marginEnd="16dp"/>
 
-        </LinearLayout>
         </LinearLayout>
 
 
