update ui problem

--- a/app/src/main/res/layout/recycler_view_sender_dialog.xml
+++ b/app/src/main/res/layout/recycler_view_sender_dialog.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/sender_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentEnd="true"
-        android:gravity="end"
-        android:background="@drawable/sender_bubble"
-        android:paddingTop="12dp"
-        android:elevation="4dp" >
+        android:layout_margin="2dp"
+        android:elevation="4dp"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/sender_bubble">
 
         <LinearLayout
             android:id="@+id/body"
@@ -26,8 +31,10 @@
             android:layout_height="wrap_content"
             android:text="@string/msg_time"
             style="@style/message_time"
-            android:layout_marginTop="12dp"
+            android:layout_gravity="bottom"
             android:padding="8dp"
             android:layout_marginEnd="16dp"/>
-    </LinearLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
 </layout>
