--- a/app/src/main/res/layout/dialog_weather.xml
+++ b/app/src/main/res/layout/dialog_weather.xml
@@ -2,6 +2,12 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="vm"
+            type="com.mapd721.secretchat.ui.view_model.WeatherDialogViewModel" />
+    </data>
+    
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,41 +19,53 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
             <TextView
-                android:id="@+id/weather_condition"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sunny"
-                android:textSize="14sp"
-                android:textAlignment="center"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="32dp"
-                android:textColor="@color/dark_grey"
-                />
-
-            <TextView
-                android:id="@+id/weather_degree"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="27°"
+                android:layout_gravity="center"
+                android:text="@string/weather_dialog_status_update"
                 android:textStyle="bold"
                 android:textSize="40sp"
                 android:textColor="@color/dark_grey"
                 android:textAlignment="center"
-                android:layout_marginStart="36dp"/>
-        </LinearLayout>
+                android:visibility="@{vm.uiShownInUpdatingVisibility}" />
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="50dp"
-            style="@style/Divider_grey"
-            android:layout_marginTop="35dp"
-            android:layout_marginStart="8dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/weather_condition"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.condition}"
+                    android:textSize="14sp"
+                    android:textAlignment="center"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="32dp"
+                    android:textColor="@color/dark_grey"
+                    android:visibility="@{vm.uiShownAfterUpdatedVisibility}" />
+
+                <TextView
+                    android:id="@+id/weather_degree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{vm.temperature + `°`}"
+                    android:textStyle="bold"
+                    android:textSize="40sp"
+                    android:textColor="@color/dark_grey"
+                    android:textAlignment="center"
+                    android:layout_marginStart="36dp"
+                    android:visibility="@{vm.uiShownAfterUpdatedVisibility}" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="50dp"
+                style="@style/Divider_grey"
+                android:layout_marginTop="35dp"
+                android:layout_marginStart="8dp"
             />
 
             <LinearLayout
@@ -59,33 +77,26 @@
                     android:id="@+id/weather_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="11 April, Tuesday"
+                    android:text="@{vm.dateStr}"
                     android:textColor="@color/dark_grey"
                     android:textSize="16sp"
                     android:layout_marginTop="35dp"
-                    android:layout_marginStart="12dp"/>
+                    android:layout_marginStart="12dp"
+                    android:visibility="@{vm.uiShownAfterUpdatedVisibility}" />
 
                 <TextView
                     android:id="@+id/weather_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Toronto"
+                    android:text="@{vm.location}"
                     android:textColor="@color/dark_grey"
                     android:textSize="20dp"
                     android:layout_marginStart="12dp"
                     android:layout_marginBottom="24dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:visibility="@{vm.uiShownAfterUpdatedVisibility}" />
 
             </LinearLayout>
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/sunny"
-                android:adjustViewBounds="true"
-                android:layout_margin="16dp"
-                android:layout_gravity="center_vertical"
-                app:tint="@color/dark_grey" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
