--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,12 @@
         android:src="@drawable/icon"
         android:contentDescription="@string/icon" />
 
+    <ImageView
+        android:id="@+id/profile_picture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/baseline_add_24"/>
+
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
